# imu_algorithms

./: .gitignore  CMakeLists.txt  README.md  main.cpp
MahonyAHRS/: MahonyAHRS.cpp  README.md  main.cpp
complementary_filter/: complementary_filter.cpp  main.cpp  test.cpp
data/: WT9344M_100HZ_dynamic.csv  WT9344_100HZ_.csv
include/: complementary_filter.h  madgwick.h  mahony.h
madgwick/: README.md  imu_filter.cpp  main.cpp
result/: WT931_100HZ_dynamic21.csv
result/CF/: WT931_100HZ_dynamic24.csv  WT9344M_100HZ_dynamic7.csv  WT9344M_2000HZ_dynamic21.csv  WT9344M_2000HZ_dynamic22.csv  WT9344M_2000HZ_dynamic23.csv  WT9344M_2000HZ_dynamic24.csv  WT9344M_2000HZ_dynamic25.csv  WT9344M_2000HZ_dynamic26.csv  WT9344M_2000HZ_dynamic27.csv
result/madgwick/: WT931_100HZ_dynamic24.csv
src/: complementary_filter.cpp  madgwick.cpp  mahony.cpp
